feat: add storybook link

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
   </style>
 </head>
 <body>
-  <a href="/universe/loggerdemo/">@siteed/react-native-logger</a>
+  <a href="/universe/loggerdemo/">@siteed/react-native-logger demo</a>
+  <a href="/universe/design-system-storybook/">@siteed/design-system storybook</a>
 </body>
 </html>
