--- a/index.html
+++ b/index.html
@@ -25,5 +25,6 @@
 <body>
   <a href="/universe/loggerdemo/">@siteed/react-native-logger demo</a>
   <a href="/universe/design-system-storybook/">@siteed/design-system storybook</a>
+  <a href="/universe/design-playground/">@siteed/design-system playground</a>
 </body>
 </html>
